Migrate HTTP proxy, fix setup wizard layout issues (#9162)
* Fix setup wizard alignment issues

* Fix http proxy setup page

* Fix image alignment

--- a/web/html/src/branding/css/susemanager/components/inputs.scss
+++ b/web/html/src/branding/css/susemanager/components/inputs.scss
@@ -7,6 +7,7 @@ $input-height: 35px;
   }
 }
 
+div.form-control,
 .form-control,
 .form-control--react-select > div:first-of-type {
   color: $eos-bc-gray-1000;
@@ -25,8 +26,6 @@ $input-height: 35px;
     background: #fff;
   }
 
-  // This is like writing `div&`, except this nonsense is valid syntax, see https://stackoverflow.com/a/28357148/1470607
-  @at-root #{selector-unify(&, div)},
   &[disabled],
   &[readonly],
   fieldset[disabled] & {
